David: minimize diffs in TestZGCWithCDS.java